...
        app:layout_constraintLeft_toRightOf="@id/flurry"
        app:layout_constraintTop_toBottomOf="@id/inmobi"
        app:layout_constraintWidth_percent="0.5" />


    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="onClickTest"
        android:text="全流程测试"
        app:layout_constraintLeft_toLeftOf="@id/mopub"
        app:layout_constraintTop_toBottomOf="@id/mopub"
...
